k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openblog-js-backend
  namespace: openblog-js
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openblog-js-backend
  template:
    metadata:
      labels:
        app: openblog-js-backend
    spec:
      containers:
        - name: openblog-js-backend
          image: iagouvea/openblog-js-backend:1.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openblog-js-frontend
  namespace: openblog-js
  labels:
    app: openblog-js-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openblog-js-frontend
  template:
    metadata:
      labels:
        app: openblog-js-frontend
    spec:
      containers:
        - name: openblog-js-frontend
          image: iagouvea/openblog-js-frontend:1.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: '128Mi'
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/
              readOnly: true
      volumes:
        - name: nginx-config
          configMap: 
            name: openblog-js-nginx-config
