k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openblog-js-postgres
  namespace: openblog-js
  labels:
    app: openblog-js-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openblog-js-db
  template:
    metadata:
      labels:
        app: openblog-js-db
    spec:
      containers:
        - name: openblog-js-db
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: openblog-js-db-pvc
