k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openblog-js-backend-service
  namespace: openblog-js
  labels:
    app: openblog-js-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: openblog-js-backend
---
apiVersion: v1
kind: Service
metadata:
  name: openblog-js-frontend-service
  namespace: openblog-js
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: openblog-js-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: openblog-js-postgres-service
  namespace: openblog-js
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: openblog-js-postgres
