k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openblog-js-frontend-ingress
  namespace: openblog-js
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: openblog-js.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openblog-js-frontend-service
                port:
                  number: 80
    - host: blog-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openblog-js-backend-service
                port:
                  number: 8080
